[package]
name = "sd-png2webp"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
riff = "2.0.0"
rexif = "0.7.3"
byteorder = "1"
png = "0.17.8"
image = "0.24.6"
webp = "0.2.2"
scheduled-thread-pool = "0.2.7"
num_cpus = "1.15.0"
crossbeam = "0.8.2"
color-print = "0.3.4"
